# dgpy-libs

./: .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .pyre_configuration  404.html  CHANGELOG.md  CNAME  Makefile  README.ipynb  README.md  _typos.toml  dev.py  dprint.json  env.sh  index.html  justfile  mkdocs.yml  mypy.ini  noxfile.py  objects.inv  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  ruff.toml  test.sh  wrangler.jsonc
libs/aiopen/: .gitignore  Makefile  README.ipynb  README.md  index.html  mypy.ini  noxfile.py  pyproject.toml
libs/aiopen/aiopen/: __about__.py  __init__.py  __main__.py  _anyio.py  _meta.py  _version.py  core.py
libs/aiopen/aiopen.api/: index.html
libs/aiopen/src/aiopen/: __about__.py  __init__.py  __main__.py  _anyio.py  _meta.py  core.py
libs/aiopen/tests/: conftest.py  test_version.py
libs/aiopen/tests/aiofiles/: test_binary.py  test_concurrency.py  test_simple.py  test_text.py
libs/aiopen/tests/aiofiles_anyio/: test_binary.py  test_concurrency.py  test_simple.py  test_text.py
libs/aiopen/tests/aiofiles_tests/: test_binary.py  test_concurrency.py  (+2 more)
libs/asyncify/: .coveragerc  LICENSE  Makefile  README.ipynb  README.md  index.html  noxfile.py  pyproject.toml
libs/asyncify/asyncify/: __about__.py  __init__.py  __main__.py  _anyio.py  _meta.py  core.py
libs/asyncify/asyncify.api/: index.html
libs/asyncify/tests/: check_tag.py  conftest.py  test_aiorun.py  test_asyncify.py  test_asyncify_anyio.py  test_version.py
libs/dgpylibs/: Makefile  pyproject.toml
libs/dgpylibs/dgpylibs/: __about__.py  __init__.py  __main__.py  _meta.py
libs/dgpylibs/tests/: test_version.py
libs/dgpytest/: Makefile  README.md  noxfile.py  pyproject.toml
libs/dgpytest/dgpytest/: __about__.py  __init__.py  __main__.py  _meta.py  hooks.py  plugin.py
libs/dgpytest/tests/: test_dgpytest.py  test_skip_os.py
libs/fmts/: .coveragerc  Makefile  README.md  noxfile.py  pyproject.toml
libs/fmts/fmts/: __about__.py  __init__.py  __main__.py  _meta.py
libs/fmts/fmts.api/: index.html
libs/fmts/tests/: test_fmts_version.py  test_timestamps.py
libs/funkify/: .gitattributes  Makefile  README.ipynb  README.md  index.html  noxfile.py  pyproject.toml
libs/funkify/funkify/: __about__.py  __init__.py  __main__.py  _meta.py  _version.py  core.py
libs/funkify/funkify.api/: index.html
libs/funkify/tests/: a_module.py  async_fn.py  no_such_module.py  static_export.py  static_export_no_name.py  sync_fn.py  test_funkify.py  test_version.py
libs/h5/: .coveragerc  .gitignore  Makefile  README.ipynb  README.md  index.html  noxfile.py  pyproject.toml  pytest.ini
libs/h5/h5/: __about__.py  __init__.py  __main__.py  _info.py  _meta.py  _types.py  cli.py  core.py  dev.py  info.py  legacy.py  testing.py
libs/h5/h5.api/: index.html
libs/h5/tests/: check_tag.py  conftest.py  test_cli.py  test_exports.py  test_h5.py  test_h5_cli.py  test_h5_dev.py  test_version.py
libs/jsonbourne/: .coveragerc  JSON.py  Makefile  README.ipynb  README.md  david_webb.py  index.html  noxfile.py  pydantic-versions.md  pyproject.toml  pytest.ini
libs/jsonbourne/jsonbourne/: __about__.py  __init__.py  __main__.py  _import.py  _meta.py  _version.py  core.py  datacls.py  fastapi.py  helpers.py  httpx.py  json.py  json_arr.py  jsonlib.py  protocols.py  pydantic.py  trydantic.py  types.py
libs/jsonbourne/jsonbourne.api/: index.html
libs/jsonbourne/src/: david_webb.py
libs/jsonbourne/tests/: check_tag.py  test_httpx.py  test_json_arr.py  test_json_base_model.py  test_json_obj.py  test_json_obj_attrs.py  test_json_obj_pydantic.py  test_json_with_comments.py  test_jsonbourne.py  test_jsonbourne_libs.py  test_jsonbourne_orjson.py  test_jsonbourne_rapidjson.py  test_version.py
libs/lager/: .bumpversion.cfg  .coveragerc  .editorconfig  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.ipynb  README.md  afile.py  index.html  pyproject.toml  tox.ini
libs/lager/keg/: package-lock.json  package.json
libs/lager/lager/: __about__.py  __init__.py  __main__.py  _meta.py  _version.py  const.py  core.py  dev.py  fastapi.py  logging.py  pydantic.py
libs/lager/tests/: test_lager.py  test_version.py
libs/listless/: .coveragerc  Makefile  README.md  noxfile.py  pyproject.toml
libs/listless/listless/: __about__.py  __init__.py  __main__.py  _meta.py
libs/listless/listless.api/: index.html
libs/listless/tests/: test_listless.py
libs/requires/: .coveragerc  Makefile  README.ipynb  README.md  index.html  noxfile.py  pyproject.toml  pytest.ini
libs/requires/requires/: __about__.py  __init__.py  __main__.py  _meta.py  _version.py  core.py  shed.py
libs/requires/requires.api/: index.html
libs/requires/tests/: test_preflight_check.py  test_requires.py  test_requires_w_json_libs.py  test_shed.py  test_version.py
libs/shellfish/: .coveragerc  Makefile  README.md  build_shellfish.py  pyproject.toml
libs/shellfish/shellfish/: __about__.py  __init__.py  __main__.py  _meta.py  _types.py  aioshutil.py  batman.py  const.py  dotenv.py  echo.py  exe.py  fs.py  fs_.py  libhash.py  osfs.py  process.py  psu.py  sh.py  sp.py  stdio.py  testing.py  types.py
libs/shellfish/shellfish.api/: index.html
libs/shellfish/tests/: test_aio_subproc.py  test_aios.py  test_batman.py  test_compat.py  test_deprecations.py  test_do_async.py  test_env.py  test_fs.py  test_popen_gen.py  test_reprs.py  test_run_async.py  test_sh.py  test_shellfish.py  test_shellfish_exports.py  test_subproc.py  test_subproc_async.py  test_subproc_windows.py  test_tree.py  test_version.py
libs/xtyping/: .coveragerc  LICENSE  Makefile  README.ipynb  README.md  build_xtyping.py  index.html  noxfile.py  pyproject.toml  test_xtyping.py
libs/xtyping/tests/: check_tag.py  test_version.py  test_xtyping.py
libs/xtyping/xtyping/: __about__.py  __init__.py  __main__.py  _meta.py  _typing.py  _typing_extensions.py  _xtyping.py  npt.py  shed.py
libs/xtyping/xtyping.api/: index.html
(+311 files in other folders)
