[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "aiopen"
version = "0.7.0"
description = "Async file io"
readme = "README.md"
keywords = [
  "aiopen",
  "anyio",
  "async",
  "dgpy",
  "fs",
]

license = "MIT"
authors = [
  { name = "jesse", email = "jessekrubin@gmail.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "funkify",
]

optional-dependencies.test = [
  "anyio>=4.4",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
]
repository = "https://github.com/dynamic-graphics-inc/dgpy-libs"
homepage = "https://github.com/dynamic-graphics-inc/dgpy-libs/tree/main/libs/aiopen"
packages = [
  { include = "aiopen", from = "." },
]

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/aiopen" ]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.ruff]
# COVERAGE

extend = "../../pyproject.toml"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "--disable-warnings",
  "--cov-config=pyproject.toml",
  "--ignore-glob=*/_meta.py",
]
xfail_strict = true
filterwarnings = [
  "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [ "asyncio", "anyio", "version" ]
testpaths = [ "aiopen", "tests" ]

[tool.coverage.run]
source = [ 'aiopen' ]
branch = true
context = '${CONTEXT}'
omit = [ "**/__main__.py" ]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
  'pragma: no cover',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  '@overload',
  '\(Protocol\):$',
  'if 0:',
  'if False:',
  'class AsyncBase:',
]

[tool.coverage.paths]
source = [ 'aiopen/' ]

[tool.mypy]
# --strict
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = true
ignore_missing_imports = true
implicit_reexport = false
strict_equality = true
# --strict end

[tool]

[tool.uv]
dev-dependencies = [
  "pytest-asyncio>=0.23.8",
  "anyio>=4.4.0",
  "pytest-cov>=5.0.0",
]

[tool.uv.sources]
funkify = { workspace = true }
