[project]
name = "asyncify"
version = "0.10.0"
description = "sync 2 async"
authors = [{name = "jesse",email = "jesse@dgi.com"}]
readme = "README.md"
keywords = ["async", "asyncify", "asyncio", "dgpy"]
classifiers = ["Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Typing :: Typed"]
dependencies = ["funkify>=0.4.0", "xtyping>=0.5.0"]
requires-python = ">=3.8,<4.0"

[project.urls]
Homepage = "https://github.com/dynamic-graphics-inc/dgpy-libs/tree/main/libs/asyncify"
Repository = "https://github.com/dynamic-graphics-inc/dgpy-libs"

[tool]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "--disable-warnings",
  "--cov-config=pyproject.toml",
  "--ignore-glob=*/_meta.py",
]
xfail_strict = true
filterwarnings = [
  "error",
  'ignore:"@coroutine" decorator is deprecated since Python 3\.8, use "async def" instead:DeprecationWarning',
  "ignore::RuntimeWarning",
  "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = ["asyncio", "anyio"]
testpaths = ["asyncify", "tests"]


[tool.coverage.run]
source = ['asyncify']
branch = true
context = '${CONTEXT}'
omit = ["**/__main__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
  'pragma: no cover',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  '@overload',
  '\(Protocol\):$',
  'class BaseAsync:',
  'if 0:',
  'if False:',
]

[tool.coverage.paths]
source = ['asyncify/']


[tool.ruff]
extend = "../../pyproject.toml"

[tool.rye]
managed = true

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/asyncify"]

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=0.23.8",
    "anyio>=4.4.0",
    "pytest>=8.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
