[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "asyncify"
version = "0.11.0"
description = "sync 2 async"
readme = "README.md"
keywords = [ "async", "asyncify", "asyncio", "dgpy" ]
authors = [ { name = "jesse", email = "jesse@dgi.com" } ]
requires-python = ">=3.9,<4.0"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [ "funkify>=0.4", "xtyping>=0.5" ]

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/asyncify" ]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "--disable-warnings",
  "--cov-config=pyproject.toml",
  "--ignore-glob=*/_meta.py",
]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [ "asyncio", "anyio" ]
testpaths = [ "asyncify", "tests" ]

[tool.coverage.run]
source = [ 'asyncify' ]
branch = true
context = '${CONTEXT}'
omit = [ "**/__main__.py" ]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
  'pragma: no cover',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  '@overload',
  '\(Protocol\):$',
  'class BaseAsync:',
  'if 0:',
  'if False:',
]

[tool.coverage.paths]
source = [ 'asyncify/' ]

[tool]

[tool.uv]
dev-dependencies = [
  "pytest-asyncio>=0.23.8",
  "anyio>=4.4.0",
  "pytest>=8.3.2",
]
